Making smooth scroll

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -115,8 +115,7 @@ button.mfp-arrow {
   outline: none;
   padding: 0;
   z-index: 1046;
-  box-shadow: none;
-  touch-action: manipulation; }
+  box-shadow: none; }
 
 button::-moz-focus-inner {
   padding: 0;
